Ensure the flex trick to align buttons properly at any size does not cause a scrollbar

--- a/trademapper/resources/styles/trademapper.scss
+++ b/trademapper/resources/styles/trademapper.scss
@@ -394,16 +394,21 @@ span.showhide {
 }
 
 #tabpanel-info-supportus-buttons {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-between;
-	margin: 0 -5px;
+	width: 100%;
+	overflow: hidden;
 
-	> .btn {
-		flex: 1;
-		margin: 0 5px 5px 5px;
+	> .flex-inner {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: space-between;
+		margin: 0 -5px;
+
+		> .btn {
+			flex: 1;
+			margin: 0 5px 5px 5px;
+		}
 	}
 }
 
